[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "dovecotauth"
author = "Keith Gaughan"
author-email = "k@stereochro.me"
home-page = "https://github.com/kgaughan/dovecotauth"
requires-python = ">=3.3"
description-file = "README.rst"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Topic :: Communications :: Email :: Mail Transport Agents",
	"Topic :: Security",
	"Topic :: Utilities",
]

[tool.flit.metadata.requires-extra]
dev = [
	"passlib",
]
